--- a/data/resources/styles/styles.qss
+++ b/data/resources/styles/styles.qss
@@ -24,13 +24,22 @@ QWidget#buttonsBar {
 
 
 /* === BOTONES DEL MENÚ LATERAL === */
-QPushButton {
+#widgetbuttonsBarPhoto QPushButton {
     background-color: #2088BB;
     color: #FFFFFF;
     border-radius: 8px;
-    padding: 8px 16px;
     border: 1px solid #0E4F6B;
-    margin-bottom: 10px;
+}
+#widgetbuttonsBarPhoto QPushButton:hover {
+    background-color: #5CB0E5;
+    color: black;
+}
+#widgetbuttonsBarPhoto QPushButton:icon{
+    color: white;
+    }
+
+#widgetbuttonsBarPhoto QPushButton:pressed {
+    background-color: #0E4F6B;
 }
 
 #buttonsBar QPushButton {
@@ -53,14 +62,7 @@ QPushButton {
     );
 }
 
-QPushButton:hover {
-    background-color: #5CB0E5;
-    color: black;
-}
 
-QPushButton:pressed {
-    background-color: #0E4F6B;
-}
 
 /* === FRAME CONTENEDOR DEL STACKED === */
 QWidget#homeView {
