--- a/data/resources/styles/styles.qss
+++ b/data/resources/styles/styles.qss
@@ -62,6 +62,13 @@ QWidget#buttonsBar {
     );
 }
 
+/* BOTONES DEL FRAME PARA IMPRIMIR*/
+#credentialBtns QPushButton {
+    background-color: #2088BB;
+    color: #FFFFFF;
+    border-radius: 8px;
+    border: 1px solid #0E4F6B;
+}
 
 
 /* === FRAME CONTENEDOR DEL STACKED === */
