Ajuste de modularidad y separacion de responsabilidades en los metodospara el renderizado de la credencial.

--- a/data/resources/styles/styles.qss
+++ b/data/resources/styles/styles.qss
@@ -70,6 +70,9 @@ QWidget#buttonsBar {
     border: 1px solid #0E4F6B;
 }
 
+#credentialBtns QLabel, QCheckBox{
+    color: #FFFFFF}
+
 
 /* === FRAME CONTENEDOR DEL STACKED === */
 QWidget#homeView {
